tests/e2e-targetallocator/targetallocator-networkpolicy/00-install.yaml
apiVersion: opentelemetry.io/v1beta1
kind: OpenTelemetryCollector
metadata:
  name: otel
spec:
  mode: statefulset
  networkPolicy:
    enabled: true
  targetAllocator:
    enabled: true
  config:
    receivers:
      prometheus:
        config:
          scrape_configs:
            - job_name: static
              static_configs:
                - targets: ['localhost:8888']
    exporters:
      debug: {}
    service:
      pipelines:
        metrics:
          receivers: [prometheus]
          exporters: [debug]
