tests/e2e-targetallocator/targetallocator-networkpolicy/01-assert.yaml
# The NetworkPolicy follows the new API server endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-targetallocator-networkpolicy
spec:
  (contains(egress[].to[].ipBlock.cidr, '203.0.113.10/32')): true
