tests/e2e-targetallocator/targetallocator-networkpolicy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: targetallocator-networkpolicy
spec:
  # The API server EndpointSlice created in step-01 is added to every target allocator NetworkPolicy in the cluster.
  concurrent: false
  bindings:
  - name: apiServerService
    value: (x_k8s_get($client, 'v1', 'Service', 'default', 'kubernetes'))
  - name: apiServerEndpoints
    value: (x_k8s_get($client, 'discovery.k8s.io/v1', 'EndpointSlice', 'default', 'kubernetes'))
  steps:
  - name: Add OpenShift namespace annotations
    use:
      template: ../../step-templates/openshift-namespace-annotations.yaml
  - name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
  - name: step-01
    try:
    - apply:
        file: 01-install.yaml
    - assert:
        file: 01-assert.yaml
